# insight-agent

./: .gitignore  README.md  TTFT_ANALYSIS.md  VKDB_SEARCH_METHODS_ANALYSIS.md  blocking.md  blocking2.md  chart.md  data_analysis.md  intent_prompt.md  intetent_output.md  main.py  pyproject.toml  pytest.ini  requirements.txt  scalar_retrive.md  search_random.md  searchbumultimodal.md  searchbyscalar.md
.specstory/history/: 2025-12-21_14-33Z-图表生成方案分析与规划.md
scripts/: run_pipeline.py  run_vkdb_to_mysql.py  test_mysql_connection.py
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routers/: v1.py
src/core/: __init__.py  dotenv.py  logging_config.py  settings.py
src/domain/: __init__.py  chat.py  state.py
src/graphs/: __init__.py
src/graphs/agent_graph/: graph.py  nodes.py  state.py  tools.py
src/graphs/agent_graph/prompts/: intent_prompt.md  summary_prompt.md  summary_prompt2.md
src/graphs/chat_graph/: graph.py
src/graphs/vkdb_graph/: __init__.py  graph.py  runtime.py  tools.py
src/infra/: __init__.py
src/infra/mysql/: __init__.py  tools.py
src/infra/vkdb/: __init__.py  client.py  join.py
src/services/: __init__.py  agent_service.py  chat_service.py  intent_structurize_service.py  vkdb_graph_service.py  vkdb_mysql_service.py
src/utils/: __init__.py  data_aggregator.py
tests/: test_vkdb_mysql_join.py
